--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "async": "^3.2.3",
     "bcrypt": "^5.0.1",
+    "body-parser": "^1.19.2",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
@@ -31,6 +32,7 @@
     "passport": "^0.5.2",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
+    "passport-json-custom": "^1.0.1",
     "passport-local": "^1.0.0",
     "pug": "^3.0.2"
   },
