--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 API_PORT = 3001;
-MONGO_URI = mongodb+srv://huannguyen:huanng@library.7evns.mongodb.net/SocialMagicDB?retryWrites=true&w=majority;
+MONGO_URI = mongodb+srv://huannguyen:huanng@library.7evns.mongodb.net/SocialMagicDB?retryWrites=true&w=majority
