--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "serverstart": "npm run devstart"
   },
   "dependencies": {
+    "app-root-path": "^3.0.0",
     "async": "^3.2.3",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.2",
@@ -26,6 +27,7 @@
     "jade": "~1.11.0",
     "mongoose": "^6.1.3",
     "morgan": "~1.9.1",
+    "multer": "^1.4.4",
     "node-persist": "^3.1.0",
     "nodemailer": "^6.7.2",
     "passport": "^0.5.2",
