--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 API_PORT = 3001;
 MONGO_URI = mongodb+srv://huannguyen:huanng@library.7evns.mongodb.net/SocialMagicDB?retryWrites=true&w=majority
+TOKEN_KEY = "PNV_ESocial"
