--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "serverstart": "npm run devstart"
   },
   "dependencies": {
-    "app-root-path": "^3.0.0",
     "async": "^3.2.3",
-    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.2",
     "cookie-parser": "~1.4.4",
+    "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^10.0.0",
@@ -24,7 +24,7 @@
     "express-validator": "^6.14.0",
     "http-errors": "~1.6.3",
     "http-status": "^1.5.0",
-    "jade": "~1.11.0",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mongoose": "^6.1.3",
     "morgan": "~1.9.1",
@@ -33,9 +33,7 @@
     "nodemailer": "^6.7.2",
     "passport": "^0.5.2",
     "passport-facebook": "^3.0.0",
-    "passport-google-oauth20": "^2.0.0",
-    "passport-json-custom": "^1.0.1",
-    "pug": "^3.0.2"
+    "passport-google-oauth20": "^2.0.0"
   },
   "repository": {
     "type": "git",
