--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "async": "^3.2.3",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.2",
+    "canvas": "^2.9.0",
     "cookie-parser": "~1.4.4",
     "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
@@ -29,7 +30,6 @@
     "mongoose": "^6.1.3",
     "morgan": "~1.9.1",
     "multer": "^1.4.4",
-    "node-persist": "^3.1.0",
     "nodemailer": "^6.7.2",
     "passport": "^0.5.2",
     "passport-facebook": "^3.0.0",
