--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
 API_PORT = 3001;
 MONGO_URI = mongodb+srv://huannguyen:huanng@library.7evns.mongodb.net/SocialMagicDB?retryWrites=true&w=majority
 TOKEN_KEY = "PNV_ESocial"
+PARTNER CODE = MOMOLPT320220316
+ACCESS KEY = RHsdaCHqCmtDQALF
+SECRET KEY = ULmWaEZ4NuLmxTGnzMRB06nnXIED72e9
+API ENDPOINT = https://test-payment.momo.vn/gw_payment/transactionProcessor
