--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "type": "module",
   "scripts": {
     "start": "node ./bin/www.js",
-    "devstart": "nodemon ./bin/www",
+    "dev": "nodemon ./bin/www",
     "serverstart": "npm run devstart"
   },
   "dependencies": {
